--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
   --tabs-color: #FFE7D4;
   --background-color: #EDAF94;
   --grad-color-start: #FFE7D4;
-  --grad-color-end: #FFD3B6;
+  --grad-color-end: #ea580c;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,7 +19,11 @@
 
 body {
   color: var(--text-color);
-  background: radial-gradient(at top left, var(--grad-color-start) 0%, var(--grad-color-end) 75%);
+  /* background: radial-gradient(at top left, var(--grad-color-start) 0%, var(--grad-color-end) 75%); */
+  /* background: linear-gradient(314deg, #edaf94, #ea580c); */
+  /* animation: rollingGradient 1s linear infinite;   */
+  background: linear-gradient(314deg, #edaf94, #fb923c);
+  background-size: 400% 400%;
 }
 
 @layer utilities {
